<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<Button android:id="@+id/btn_writeFile"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:text="@string/writeFile"/>
	<Button android:id="@+id/btn_readFile"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:text="@string/readFile"/>
	<Button android:id="@+id/btn_sdOpen"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:text="@string/sdOpen"/>
	<Button android:id="@+id/btn_sax"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:text="@string/sax"/>
	<Button android:id="@+id/btn_setting"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:text="@string/setting"/>
</LinearLayout>