<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/inputNumber"/>
    
    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_phone"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"/>
    
    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_content"/>
    
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sms"
        android:text="@string/commitText"/>
    
</LinearLayout>